// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reactRules > should create react rules 1`] = `
{
  "@eslint-react/dom/no-dangerously-set-innerhtml": "error",
  "@eslint-react/dom/no-dangerously-set-innerhtml-with-children": "error",
  "@eslint-react/dom/no-find-dom-node": "error",
  "@eslint-react/dom/no-flush-sync": "error",
  "@eslint-react/dom/no-missing-button-type": "error",
  "@eslint-react/dom/no-missing-iframe-sandbox": "error",
  "@eslint-react/dom/no-namespace": "error",
  "@eslint-react/dom/no-render": "error",
  "@eslint-react/dom/no-render-return-value": "error",
  "@eslint-react/dom/no-script-url": "error",
  "@eslint-react/dom/no-unknown-property": "error",
  "@eslint-react/dom/no-unsafe-iframe-sandbox": "error",
  "@eslint-react/dom/no-unsafe-target-blank": "error",
  "@eslint-react/dom/no-use-form-state": "error",
  "@eslint-react/dom/no-void-elements-with-children": "error",
  "@eslint-react/hooks-extra/no-direct-set-state-in-use-effect": "error",
  "@eslint-react/hooks-extra/no-unnecessary-use-prefix": "error",
  "@eslint-react/no-access-state-in-setstate": "error",
  "@eslint-react/no-array-index-key": "error",
  "@eslint-react/no-children-count": "error",
  "@eslint-react/no-children-for-each": "error",
  "@eslint-react/no-children-map": "error",
  "@eslint-react/no-children-only": "error",
  "@eslint-react/no-children-to-array": "error",
  "@eslint-react/no-clone-element": "error",
  "@eslint-react/no-comment-textnodes": "error",
  "@eslint-react/no-component-will-mount": "error",
  "@eslint-react/no-component-will-receive-props": "error",
  "@eslint-react/no-component-will-update": "error",
  "@eslint-react/no-context-provider": "error",
  "@eslint-react/no-create-ref": "error",
  "@eslint-react/no-default-props": "error",
  "@eslint-react/no-direct-mutation-state": "error",
  "@eslint-react/no-duplicate-jsx-props": "error",
  "@eslint-react/no-duplicate-key": "error",
  "@eslint-react/no-forward-ref": "error",
  "@eslint-react/no-implicit-key": "error",
  "@eslint-react/no-missing-key": "error",
  "@eslint-react/no-nested-component-definitions": "error",
  "@eslint-react/no-prop-types": "error",
  "@eslint-react/no-redundant-should-component-update": "error",
  "@eslint-react/no-set-state-in-component-did-mount": "error",
  "@eslint-react/no-set-state-in-component-did-update": "error",
  "@eslint-react/no-set-state-in-component-will-update": "error",
  "@eslint-react/no-string-refs": "error",
  "@eslint-react/no-unsafe-component-will-mount": "error",
  "@eslint-react/no-unsafe-component-will-receive-props": "error",
  "@eslint-react/no-unsafe-component-will-update": "error",
  "@eslint-react/no-unstable-context-value": "error",
  "@eslint-react/no-unstable-default-props": "error",
  "@eslint-react/no-unused-class-component-members": "error",
  "@eslint-react/no-unused-state": "error",
  "@eslint-react/no-use-context": "error",
  "@eslint-react/no-useless-forward-ref": "error",
  "@eslint-react/no-useless-fragment": "error",
  "@eslint-react/use-jsx-vars": "error",
  "@eslint-react/web-api/no-leaked-event-listener": "error",
  "@eslint-react/web-api/no-leaked-interval": "error",
  "@eslint-react/web-api/no-leaked-resize-observer": "error",
  "@eslint-react/web-api/no-leaked-timeout": "error",
  "jsx-a11y/alt-text": "error",
  "jsx-a11y/anchor-ambiguous-text": "off",
  "jsx-a11y/anchor-has-content": "error",
  "jsx-a11y/anchor-is-valid": "error",
  "jsx-a11y/aria-activedescendant-has-tabindex": "error",
  "jsx-a11y/aria-props": "error",
  "jsx-a11y/aria-proptypes": "error",
  "jsx-a11y/aria-role": "error",
  "jsx-a11y/aria-unsupported-elements": "error",
  "jsx-a11y/autocomplete-valid": "error",
  "jsx-a11y/click-events-have-key-events": "error",
  "jsx-a11y/control-has-associated-label": [
    "off",
    {
      "ignoreElements": [
        "audio",
        "canvas",
        "embed",
        "input",
        "textarea",
        "tr",
        "video",
      ],
      "ignoreRoles": [
        "grid",
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "row",
        "tablist",
        "toolbar",
        "tree",
        "treegrid",
      ],
      "includeRoles": [
        "alert",
        "dialog",
      ],
    },
  ],
  "jsx-a11y/heading-has-content": "error",
  "jsx-a11y/html-has-lang": "error",
  "jsx-a11y/iframe-has-title": "error",
  "jsx-a11y/img-redundant-alt": "error",
  "jsx-a11y/interactive-supports-focus": [
    "error",
    {
      "tabbable": [
        "button",
        "checkbox",
        "link",
        "searchbox",
        "spinbutton",
        "switch",
        "textbox",
      ],
    },
  ],
  "jsx-a11y/label-has-associated-control": "error",
  "jsx-a11y/label-has-for": "off",
  "jsx-a11y/media-has-caption": "error",
  "jsx-a11y/mouse-events-have-key-events": "error",
  "jsx-a11y/no-access-key": "error",
  "jsx-a11y/no-autofocus": "error",
  "jsx-a11y/no-distracting-elements": "error",
  "jsx-a11y/no-interactive-element-to-noninteractive-role": [
    "error",
    {
      "canvas": [
        "img",
      ],
      "tr": [
        "none",
        "presentation",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-element-interactions": [
    "error",
    {
      "alert": [
        "onKeyUp",
        "onKeyDown",
        "onKeyPress",
      ],
      "body": [
        "onError",
        "onLoad",
      ],
      "dialog": [
        "onKeyUp",
        "onKeyDown",
        "onKeyPress",
      ],
      "handlers": [
        "onClick",
        "onError",
        "onLoad",
        "onMouseDown",
        "onMouseUp",
        "onKeyPress",
        "onKeyDown",
        "onKeyUp",
      ],
      "iframe": [
        "onError",
        "onLoad",
      ],
      "img": [
        "onError",
        "onLoad",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-element-to-interactive-role": [
    "error",
    {
      "fieldset": [
        "radiogroup",
        "presentation",
      ],
      "li": [
        "menuitem",
        "menuitemradio",
        "menuitemcheckbox",
        "option",
        "row",
        "tab",
        "treeitem",
      ],
      "ol": [
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "tablist",
        "tree",
        "treegrid",
      ],
      "table": [
        "grid",
      ],
      "td": [
        "gridcell",
      ],
      "ul": [
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "tablist",
        "tree",
        "treegrid",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-tabindex": [
    "error",
    {
      "allowExpressionValues": true,
      "roles": [
        "tabpanel",
      ],
      "tags": [],
    },
  ],
  "jsx-a11y/no-redundant-roles": "error",
  "jsx-a11y/no-static-element-interactions": [
    "error",
    {
      "allowExpressionValues": true,
      "handlers": [
        "onClick",
        "onMouseDown",
        "onMouseUp",
        "onKeyPress",
        "onKeyDown",
        "onKeyUp",
      ],
    },
  ],
  "jsx-a11y/role-has-required-aria-props": "error",
  "jsx-a11y/role-supports-aria-props": "error",
  "jsx-a11y/scope": "error",
  "jsx-a11y/tabindex-no-positive": "error",
  "react-compiler/react-compiler": "error",
  "react-hooks/exhaustive-deps": "error",
  "react-hooks/rules-of-hooks": "error",
  "react-refresh/only-export-components": [
    "warn",
    {
      "allowConstantExport": undefined,
      "allowExportNames": [],
    },
  ],
}
`;

exports[`reactRules > should enable recommended TypeScript rules 1`] = `
{
  "@eslint-react/dom/no-dangerously-set-innerhtml": "error",
  "@eslint-react/dom/no-dangerously-set-innerhtml-with-children": "error",
  "@eslint-react/dom/no-find-dom-node": "error",
  "@eslint-react/dom/no-flush-sync": "error",
  "@eslint-react/dom/no-missing-button-type": "error",
  "@eslint-react/dom/no-missing-iframe-sandbox": "error",
  "@eslint-react/dom/no-namespace": "error",
  "@eslint-react/dom/no-render": "error",
  "@eslint-react/dom/no-render-return-value": "error",
  "@eslint-react/dom/no-script-url": "error",
  "@eslint-react/dom/no-unknown-property": "off",
  "@eslint-react/dom/no-unsafe-iframe-sandbox": "error",
  "@eslint-react/dom/no-unsafe-target-blank": "error",
  "@eslint-react/dom/no-use-form-state": "error",
  "@eslint-react/dom/no-void-elements-with-children": "error",
  "@eslint-react/hooks-extra/no-direct-set-state-in-use-effect": "error",
  "@eslint-react/hooks-extra/no-unnecessary-use-prefix": "error",
  "@eslint-react/no-access-state-in-setstate": "error",
  "@eslint-react/no-array-index-key": "error",
  "@eslint-react/no-children-count": "error",
  "@eslint-react/no-children-for-each": "error",
  "@eslint-react/no-children-map": "error",
  "@eslint-react/no-children-only": "error",
  "@eslint-react/no-children-to-array": "error",
  "@eslint-react/no-clone-element": "error",
  "@eslint-react/no-comment-textnodes": "error",
  "@eslint-react/no-component-will-mount": "error",
  "@eslint-react/no-component-will-receive-props": "error",
  "@eslint-react/no-component-will-update": "error",
  "@eslint-react/no-context-provider": "error",
  "@eslint-react/no-create-ref": "error",
  "@eslint-react/no-default-props": "error",
  "@eslint-react/no-direct-mutation-state": "error",
  "@eslint-react/no-duplicate-jsx-props": "off",
  "@eslint-react/no-duplicate-key": "error",
  "@eslint-react/no-forward-ref": "error",
  "@eslint-react/no-implicit-key": "error",
  "@eslint-react/no-leaked-conditional-rendering": "error",
  "@eslint-react/no-missing-key": "error",
  "@eslint-react/no-nested-component-definitions": "error",
  "@eslint-react/no-prop-types": "error",
  "@eslint-react/no-redundant-should-component-update": "error",
  "@eslint-react/no-set-state-in-component-did-mount": "error",
  "@eslint-react/no-set-state-in-component-did-update": "error",
  "@eslint-react/no-set-state-in-component-will-update": "error",
  "@eslint-react/no-string-refs": "error",
  "@eslint-react/no-unsafe-component-will-mount": "error",
  "@eslint-react/no-unsafe-component-will-receive-props": "error",
  "@eslint-react/no-unsafe-component-will-update": "error",
  "@eslint-react/no-unstable-context-value": "error",
  "@eslint-react/no-unstable-default-props": "error",
  "@eslint-react/no-unused-class-component-members": "error",
  "@eslint-react/no-unused-state": "error",
  "@eslint-react/no-use-context": "error",
  "@eslint-react/no-useless-forward-ref": "error",
  "@eslint-react/no-useless-fragment": "error",
  "@eslint-react/use-jsx-vars": "off",
  "@eslint-react/web-api/no-leaked-event-listener": "error",
  "@eslint-react/web-api/no-leaked-interval": "error",
  "@eslint-react/web-api/no-leaked-resize-observer": "error",
  "@eslint-react/web-api/no-leaked-timeout": "error",
  "jsx-a11y/alt-text": "error",
  "jsx-a11y/anchor-ambiguous-text": "off",
  "jsx-a11y/anchor-has-content": "error",
  "jsx-a11y/anchor-is-valid": "error",
  "jsx-a11y/aria-activedescendant-has-tabindex": "error",
  "jsx-a11y/aria-props": "error",
  "jsx-a11y/aria-proptypes": "error",
  "jsx-a11y/aria-role": "error",
  "jsx-a11y/aria-unsupported-elements": "error",
  "jsx-a11y/autocomplete-valid": "error",
  "jsx-a11y/click-events-have-key-events": "error",
  "jsx-a11y/control-has-associated-label": [
    "off",
    {
      "ignoreElements": [
        "audio",
        "canvas",
        "embed",
        "input",
        "textarea",
        "tr",
        "video",
      ],
      "ignoreRoles": [
        "grid",
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "row",
        "tablist",
        "toolbar",
        "tree",
        "treegrid",
      ],
      "includeRoles": [
        "alert",
        "dialog",
      ],
    },
  ],
  "jsx-a11y/heading-has-content": "error",
  "jsx-a11y/html-has-lang": "error",
  "jsx-a11y/iframe-has-title": "error",
  "jsx-a11y/img-redundant-alt": "error",
  "jsx-a11y/interactive-supports-focus": [
    "error",
    {
      "tabbable": [
        "button",
        "checkbox",
        "link",
        "searchbox",
        "spinbutton",
        "switch",
        "textbox",
      ],
    },
  ],
  "jsx-a11y/label-has-associated-control": "error",
  "jsx-a11y/label-has-for": "off",
  "jsx-a11y/media-has-caption": "error",
  "jsx-a11y/mouse-events-have-key-events": "error",
  "jsx-a11y/no-access-key": "error",
  "jsx-a11y/no-autofocus": "error",
  "jsx-a11y/no-distracting-elements": "error",
  "jsx-a11y/no-interactive-element-to-noninteractive-role": [
    "error",
    {
      "canvas": [
        "img",
      ],
      "tr": [
        "none",
        "presentation",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-element-interactions": [
    "error",
    {
      "alert": [
        "onKeyUp",
        "onKeyDown",
        "onKeyPress",
      ],
      "body": [
        "onError",
        "onLoad",
      ],
      "dialog": [
        "onKeyUp",
        "onKeyDown",
        "onKeyPress",
      ],
      "handlers": [
        "onClick",
        "onError",
        "onLoad",
        "onMouseDown",
        "onMouseUp",
        "onKeyPress",
        "onKeyDown",
        "onKeyUp",
      ],
      "iframe": [
        "onError",
        "onLoad",
      ],
      "img": [
        "onError",
        "onLoad",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-element-to-interactive-role": [
    "error",
    {
      "fieldset": [
        "radiogroup",
        "presentation",
      ],
      "li": [
        "menuitem",
        "menuitemradio",
        "menuitemcheckbox",
        "option",
        "row",
        "tab",
        "treeitem",
      ],
      "ol": [
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "tablist",
        "tree",
        "treegrid",
      ],
      "table": [
        "grid",
      ],
      "td": [
        "gridcell",
      ],
      "ul": [
        "listbox",
        "menu",
        "menubar",
        "radiogroup",
        "tablist",
        "tree",
        "treegrid",
      ],
    },
  ],
  "jsx-a11y/no-noninteractive-tabindex": [
    "error",
    {
      "allowExpressionValues": true,
      "roles": [
        "tabpanel",
      ],
      "tags": [],
    },
  ],
  "jsx-a11y/no-redundant-roles": "error",
  "jsx-a11y/no-static-element-interactions": [
    "error",
    {
      "allowExpressionValues": true,
      "handlers": [
        "onClick",
        "onMouseDown",
        "onMouseUp",
        "onKeyPress",
        "onKeyDown",
        "onKeyUp",
      ],
    },
  ],
  "jsx-a11y/role-has-required-aria-props": "error",
  "jsx-a11y/role-supports-aria-props": "error",
  "jsx-a11y/scope": "error",
  "jsx-a11y/tabindex-no-positive": "error",
  "react-compiler/react-compiler": "error",
  "react-hooks/exhaustive-deps": "error",
  "react-hooks/rules-of-hooks": "error",
  "react-refresh/only-export-components": [
    "warn",
    {
      "allowConstantExport": false,
      "allowExportNames": [],
    },
  ],
}
`;
